--- a/CursoPython.ipynb
+++ b/CursoPython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMl6wf/+A04FLH3q3Th2vEi",
+      "authorship_tag": "ABX9TyOlEMsX58u4zj90q0y9LqJD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -427,10 +427,464 @@
         "## String Slicing\n",
         "\n",
         "### Definición\n",
-        "\n"
+        "\n",
+        "Slicing es el proceso de obtener una subcadena de una cadena usando sus índices.\n",
+        "\n",
+        "Podemos usar la siguiente plantilla.\n",
+        "\n",
+        "```Python\n",
+        "string[start:end]\n",
+        "```\n",
+        "\n",
+        "- **Start**: Es el indice desde donde queremos que comience la subcadena.\n",
+        "- **End**: Es el indice donde queremos que termine la subcadena.\n",
+        "\n",
+        "El caracter de **end** no se incluira en la subcadena."
       ],
       "metadata": {
         "id": "u_JpX4KyZedv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = '¡Esta es mi cadena!'\n",
+        "print(my_string[0:4])\n",
+        "print(my_string[1:7])\n",
+        "print(my_string[8:len(my_string)])"
+      ],
+      "metadata": {
+        "id": "38j4eLNfexZk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Slicing with a Step\n",
+        "\n",
+        "Python 3 tambien nos permite dividir una cadena definiendo un valor para omitiir caracteres de la cadena.\n",
+        "\n",
+        "```Python\n",
+        "string[start:end:step]\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "yKgraCNJfPoa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = \"¡Esta es mi cadena!\"\n",
+        "print(my_string[0:7])\n",
+        "print(my_string[0:7:2])\n",
+        "print(my_string[0:7:5])"
+      ],
+      "metadata": {
+        "id": "1ZU_U-8BgaxZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Reverse Slicing\n",
+        "\n",
+        "Las cadenas tambien se pueden dividir para devolver una subcadena invertida cambiando el orden de start y end y proporcionando un step negativo."
+      ],
+      "metadata": {
+        "id": "XeklaHh3g04x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = \"¡Esta es mi cadena!\"\n",
+        "print(my_string[11:2:-1])\n",
+        "print(my_string[12:0:-2])"
+      ],
+      "metadata": {
+        "id": "Bsz3T6RUhUKF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Partial Slicing\n",
+        "\n",
+        "Los indices **start** y **end** son opcionales."
+      ],
+      "metadata": {
+        "id": "drQG32zDhmUa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = \"¡Esta es mi cadena!\"\n",
+        "print(my_string[:8])\n",
+        "print(my_string[8:])\n",
+        "print(my_string[:])\n",
+        "print(my_string[::-1])"
+      ],
+      "metadata": {
+        "id": "FTxi3LiKh7Xi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## String Formatting\n",
+        "\n",
+        "### ¿Que es?\n",
+        "\n",
+        "El formato de string signnifica sustituir valores en una cadena.\n",
+        "- Insertar cadenas dentro de otra cadena.\n",
+        "- Insertar enteros dentro de una cadena.\n",
+        "- Insertar float dentro de una cadena.\n",
+        "\n",
+        "#### Insercion de cadenas."
+      ],
+      "metadata": {
+        "id": "fSLnFLBoiJUP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string1 = \"Me gusta %s\" % \"Python\"\n",
+        "print(string1) # Me gusta Python\n",
+        "\n",
+        "temp = \"Baloncesto\"\n",
+        "string2 = \"Me gusta el %s\" % temp\n",
+        "print(string2) # Me gusta el Baloncesto\n",
+        "\n",
+        "string3 = \"Me gusta %s y el %s\" % (\"Python\", temp)\n",
+        "print(string3)  # Me gusta Python and el Baloncesto"
+      ],
+      "metadata": {
+        "id": "HM_tYXBCi15Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El **%s** es el especificador de formato que le dice a Python que debe insertar una cadena en ese lugar.\n",
+        "\n",
+        "#### Insercion de enteros."
+      ],
+      "metadata": {
+        "id": "NGVqzfkrjaKt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_string = \"%i + %i = %i\" % (1,2,3)\n",
+        "print(my_string) # 1 + 2 = 3"
+      ],
+      "metadata": {
+        "id": "3qJAyeBzkInK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El **%i** es el especificador de formato que le dice a Python que debe insertar un entero en ese lugar.\n",
+        "\n",
+        "#### Insercion de float."
+      ],
+      "metadata": {
+        "id": "T31dAvNIkJnq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string1 = \"%f\" % (1.11)\n",
+        "print(string1) # '1.110000'\n",
+        "\n",
+        "string2 = \"%.2f\" % (1.11)\n",
+        "print(string2) # '1.11'\n",
+        "\n",
+        "string3 = \"%.2f\" % (1.117)\n",
+        "print(string3) # '1.12'"
+      ],
+      "metadata": {
+        "id": "1QKEnIyYkpZJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El **%f** se usa para sustituir float dentro de una cadena, para limitar la salida a un numero de decimales se usa **%.nf**\n",
+        "\n",
+        "## Operadores\n",
+        "\n",
+        "Los operadores se utilizan para realizar operaciones aritmeticas y logicas en los datos.\n",
+        "\n",
+        "Los 5 principales tipos de ooperadores en Python son:\n",
+        "- Operadores aritmeticos.\n",
+        "- Operadores de comparacion.\n",
+        "- Operadores de asignacion.\n",
+        "- Operadores logicos.\n",
+        "- Operadores bit a bit."
+      ],
+      "metadata": {
+        "id": "KadLx7LFkyXL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operadores aritmeticos\n",
+        "\n",
+        "Los operadores aritmeticos basicos en orden de precedencia.\n",
+        "\n",
+        "| Operador | Objetivo | Notacion |\n",
+        "|----------|----------|----------|\n",
+        "| () | Parentesis | Encapsula la operación |\n",
+        "| ** | Exponente | In-fix|\n",
+        "| %, *, /, // | Modulo, Multiplicacion, Division, Floor Division | In-fix |\n",
+        "| +, - | Suma, Resta | In-fix |\n",
+        "\n",
+        "### Suma"
+      ],
+      "metadata": {
+        "id": "L1N2cTGVnVU2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(10 + 5)\n",
+        "\n",
+        "float1 = 13.65\n",
+        "float2 = 3.40\n",
+        "print(float1 + float2)\n",
+        "\n",
+        "num = 20\n",
+        "flt = 10.5\n",
+        "print(num + flt)"
+      ],
+      "metadata": {
+        "id": "bBfpQwoEpsIj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Resta"
+      ],
+      "metadata": {
+        "id": "9e8Tt0B1pv6E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(10 - 5)\n",
+        "\n",
+        "float1 = -18.678\n",
+        "float2 = 3.55\n",
+        "print(float1 - float2)\n",
+        "\n",
+        "num = 20\n",
+        "flt = 10.5\n",
+        "print(num - flt)"
+      ],
+      "metadata": {
+        "id": "b0-ZrmWip7ZI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Multiplicación"
+      ],
+      "metadata": {
+        "id": "5CAt94WyqBDK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(40 * 10)\n",
+        "\n",
+        "float1 = 5.5\n",
+        "float2 = 4.5\n",
+        "print(float1 * float2)\n",
+        "\n",
+        "print(10.2 * 3)"
+      ],
+      "metadata": {
+        "id": "gCJRtgeCqDyz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### División"
+      ],
+      "metadata": {
+        "id": "Tu6JpgifqHFc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(40 / 10)\n",
+        "\n",
+        "float1 = 5.5\n",
+        "float2 = 4.5\n",
+        "print(float1 / float2)\n",
+        "print(12.4 / 2)"
+      ],
+      "metadata": {
+        "id": "cdnTqs8dqGo0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### División floor\n",
+        "\n",
+        "El resultado se eleva al entero inferior mas cercano.\n",
+        "La division de enteros da como resultado un entero."
+      ],
+      "metadata": {
+        "id": "Q-VpVkcuqUjS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(43 // 10)   # Resultado: 4\n",
+        "\n",
+        "float1 = 5.5\n",
+        "float2 = 4.5\n",
+        "print(5.5 // 4.5) # Resultado: 1.0\n",
+        "print(12.4 // 2)  # Resultado: 6.0"
+      ],
+      "metadata": {
+        "id": "hIj4B6FpqqG0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Modulo"
+      ],
+      "metadata": {
+        "id": "8KbxkjQUrLRE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(10 % 2)\n",
+        "\n",
+        "twenty_eight = 28\n",
+        "print(twenty_eight % 10)\n",
+        "\n",
+        "print(-28 % 10)  # El resto es positivo si el operador de la derecha es positivo\n",
+        "print(28 % -10)  # El resto es negativo si el operador de la derecha es negativo\n",
+        "print(34.4 % 2.5)  # El resto puede ser un float"
+      ],
+      "metadata": {
+        "id": "TQ5-qKBXrPgO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Precedencia\n",
+        "Una expresion aritmetica que contenga diferentes operadores se calcula sobre la base de la precedencia del operador."
+      ],
+      "metadata": {
+        "id": "qREKV2TYry7Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Different precedence\n",
+        "print(10 - 3 * 2)  # Multiplication computed first, followed by subtraction\n",
+        "\n",
+        "# Same precedence\n",
+        "print(3 * 20 / 5)  # Multiplication computed first, followed by division\n",
+        "print(3 / 20 * 5)  # Division computed first, followed by multiplication"
+      ],
+      "metadata": {
+        "id": "oCQqJNaZsNhV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Parentesis\n"
+      ],
+      "metadata": {
+        "id": "vZQbMsI0sQgm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print((10 - 3) * 2)  # Subtraction occurs first\n",
+        "print((18 + 2) / (10 % 8))"
+      ],
+      "metadata": {
+        "id": "VXJGDIMgsVSE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operadores comparativos\n",
+        "\n",
+        "Se usan para comparar valores en terminos matematicos.\n",
+        "\n",
+        "| Operador | Objetivo | Notacion |\n",
+        "|----------|----------|----------|\n",
+        "| > | Mayor que | In-fix |\n",
+        "| < | Menor que | In-fix |\n",
+        "| >= | Mayor que o igual a | In-fix |\n",
+        "| <= | Menor que o igual a | In-fix |\n",
+        "| == | Igual a | In-fix |\n",
+        "| != | No igual a | In-fix |\n"
+      ],
+      "metadata": {
+        "id": "q5CxXAt1stW_"
       }
     }
   ]
